bippo-central-hit-angular2-ui-be7d7ebfe610/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hit-web
  name: hit-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hit-web
  template:
    metadata:
      labels:
        app: hit-web
    spec:
      containers:
      - name: hit-web
        image: image:tag
        ports:
        - containerPort: 80
          protocol: TCP
