bippo-central-hit-angular2-ui-be7d7ebfe610/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hit-web
  name: hit-web
spec:
  selector:
    app: hit-web
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
