bippo-central-hit-angular2-ui-be7d7ebfe610/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: hit-web
  name: hit-web
spec:
  rules:
  - host: homeinvestortool.com
    http:
      paths:
      - backend:
          service:
            name: hit-web
            port:
              number: 80
        pathType: ImplementationSpecific
  - host: hit.homeinvestortool.com
    http:
      paths:
      - backend:
          service:
            name: hit-web
            port:
              number: 80
        pathType: ImplementationSpecific
